<?xml version="1.0"?>
<package format="3">
  <name>sendbooster_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for Sendbooster robot</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 의존성 추가 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
